2014-07-30 Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c (update_plot_bounds):  Provide a user-visible copy of
	the current terminal scale (oversampling, etc) as GPVAL_TERM_SCALE.
	Bug #1291

2014-07-28 Allin Cottrell  <cottrell@wfu.edu>

	* src/syscfg.h:  Report 32/64 bit Windows build in version string

2014-07-15 Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_sep):  Revise parsing of "set datafile separator".
	Allow string constants, keywords "tab" and "comma".

2014-07-12 Ethan A Merritt  <merritt@u.washington.edu>

	* src/parse.c (check_for_iteration):  Fix failure to detect some loop
	[start:end:increment] combinations that should be executed only once
	or not executed at all.
	Bug #1441

2014-07-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_dummy):  More sanity checks on "set dummy" syntax.
	Bug #1442

2014-07-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (load_tic_user):  "set Xtics ()" should clear the list
	of user-specified tics rather than setting tic generation to auto.

2013-07-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/internal.c src/win/wcommon.h src/win/wgraph.c src/win/winmain.c
	src/win/wmenu.c src/win/wprinter.c src/win/wtext.c  
	src/win/wgnuplot.rc src/win/wgnuplot.exe.manifest64:
	Backport support for Win64 from version 5 which was originally
	developed by Allin Cottrell.

	* src/win/wgraph.c:  'q' closes graph window.

2014-07-03  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/wxt/wxt_gui.c|h:  Automatically remove reference to frame from
	window list when destroying it. Prevents segfault on program exit when
	windows and wxt windows are open.
	Bugfix

2014-06-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/QtGnuplotScene.cpp (mouseReleaseEvent):
	Bugfix for timing problem with click+release of left mouse button.
	The symptom was "sticky" 3D rotation.
	Bugfix

2014-06-17  Ethan A Merritt  <merritt@u.washington.edu>
